--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,189 +2,342 @@
 
 html{
   font-size: 16px;
-  background-color: white;
-  font-family:  "Catamaran";
-}
-
-.site-container {
-  max-width: 68.19rem;
-  margin: auto;
-  border: 1px solid darkgray;
-}
-
-h1 {
-  font-size: 2.5rem;
-  font-weight: 800;
-  line-height: 1.2;
-}
-
-h3 {
-  font-size: 2rem;
-  font-weight: 700;
-  line-height: 1.1;
-}
-
-body{
-  font-family: "Catamaran", sans-serif;
-  line-height: 1.4em;
-}
-
-
-header {
-    display: flex;
-    width: 68.19rem;
-    height: 4rem;
-    justify-content: space-between;
-    position: relative;
     background-color: white;
-    z-index:10;
-
-    }
-
-    header img{
-      height: 3rem;
-      padding-left: 1.5rem;
-    }
-
-    .logo{
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-    }
-
-    .title-bar{
-      display:flex;
-      justify-content: flex-start;
-      font-weight: 700;
-      font-size: 1.4rem;
-    }
-
-    .thin{
-      font-weight: 400;
-      font-size: 1.4rem;
-      color: gray;
-    }
-
-    nav {
-        display: flex;
-        align-items: center;
-        justify-content:flex-end;
-        padding-right: 1.5rem;
-        text-decoration: none;
-
-    }
-
-    .large a {
-      list-style-type: none;
-      text-decoration: none;
-      padding: 0px 1px;
-      color: blue;
-      }
-
-      .large a:visited {
-        color: black;
-      }
-
-      .large a:hover {
-        color: red;
-        font-weight: 400;
-      }
-
-      .large a:active {
-        color: crimson;
-        background-color: lightcyan;
-      }
-
-    .vertblock{
-      height: 4rem;
-      width: 0;
-      border: 0;
-      border-left: 1rem;
-      border-style: solid;
-      border-color: darkturquoise;
-      background-color: "";
-
-    }
-
- .everyday {
-   display:flex;
-   margin: 0rem 0rem 0rem 0rem;
-   background-color: lightgray;
-   }
-
-   .everyday img {
-     display: flex;
-     margin: 2rem 2.5rem 2rem 1.5rem;
-     width: 60%;
+    font-family:  "Catamaran";
   }
 
-  .learn{
-  display: flex;
-  padding-top: 8.625rem;
-  flex-direction: column ;
-  align-items: flex-start;
-  justify-content:flex-start;
-}
+  .site-container {
+    max-width: 68.19rem;
+    margin: auto;
+    border: 1px solid darkgray;
+  }
 
-.hl-big {
- display: flex;
- font-size: 2.2rem;
- font-weight: 700;
- line-height: 1.1;
+  h1 {
+    font-size: 2.5rem;
+    font-weight: 800;
+    line-height: 1.2;
+  }
 
-}
- .hl-sml {
+  h3 {
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 1.1;
+  }
+
+  body{
+    font-family: "Catamaran", sans-serif;
+    line-height: 1.4em;
+  }
+
+
+  header {
+      display: flex;
+      width: 68.19rem;
+      height: 4rem;
+      justify-content: space-between;
+      position: fixed;
+      background-color: white;
+      z-index:10;
+
+      }
+
+      header img{
+        height: 3rem;
+        padding-left: 1.5rem;
+      }
+
+      .logo{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+      }
+
+      .title-bar{
+        display:flex;
+        justify-content: flex-start;
+        font-weight: 700;
+        font-size: 1.4rem;
+      }
+
+      .thin{
+        font-weight: 400;
+        font-size: 1.4rem;
+        color: gray;
+      }
+
+      nav {
+          display: flex;
+          align-items: center;
+          justify-content:flex-end;
+          padding-right: 1.5rem;
+          text-decoration: none;
+
+      }
+
+      .large a {
+        list-style-type: none;
+        text-decoration: none;
+        padding: 0px 1px;
+        color: blue;
+        }
+
+        .large a:visited {
+          color: black;
+        }
+
+        .large a:hover {
+          color: red;
+          font-weight: 400;
+        }
+
+        .large a:active {
+          color: crimson;
+          background-color: lightcyan;
+        }
+
+      .vertblock{
+        height: 4rem;
+        width: 0;
+        border: 0;
+        border-left: 1rem;
+        border-style: solid;
+        border-color: darkturquoise;
+        background-color: "";
+
+      }
+
+   .everyday {
+     display:flex;
+     margin: 0rem 0rem 0rem 0rem;
+     background-color: lightgray;
+     }
+
+     .everyday img {
+       display: flex;
+       margin: 2rem 2.5rem 2rem 1.5rem;
+       width: 58%;
+    }
+
+    .learn{
+    display: flex;
+    padding-top: 8.625rem;
+    flex-direction: column ;
+    align-items: flex-start;
+    justify-content:flex-start;
+  }
+
+  .hl-big {
    display: flex;
-   font-size: 1.2rem;
-   font-weight: 600;
-   padding-top: 40px;
-   padding-bottom: 80px;
-}
+   font-size: 2.2rem;
+   font-weight: 700;
+   line-height: 1.1;
 
-.btn p {
-font-size: 1.8rem;
-font-weight: 800;
-color: white;
-background-color: blue;
-display: flex;
-align-items: center;
-width: 300px;
-line-height: 1.3;
-justify-content: center;
-text-align: center;
-border: 1px sold gray;
-border-radius: 5px;
+  }
+   .hl-sml {
+     display: flex;
+     font-size: 1.2rem;
+     font-weight: 600;
+     padding-top: 40px;
+     padding-bottom: 80px;
+  }
 
-}
-
-.btn p:hover {
-  color: coral;
-}
-
-.btn p:active {
-  color: palegoldenrod;
-  background-color: crimson;
-}
-
-.photos {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  background-color: lightyellow;
-  border: 1px solid red;
-
-}
-
-.photos img {
-  display: flex;
-  width: 60%;
-  margin: 2rem 1.5rem;
-}
-
-.practicing-hl {
-  display: flex;
-  font-size: 2.3rem;
+  .btn p {
+  font-size: 1.8rem;
   font-weight: 800;
-  padding: 2rem 0rem 1.5rem 1.5rem;
-}
+  color: white;
+  background-color: blue;
+  display: flex;
+  align-items: center;
+  width: 300px;
+  line-height: 1.3;
+  justify-content: center;
+  text-align: center;
+  border: 1px sold gray;
+  border-radius: 5px;
+
+  }
+
+  .btn p:hover {
+    color: coral;
+  }
+
+  .btn p:active {
+    color: palegoldenrod;
+    background-color: crimson;
+  }
+
+  .photos {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: lightyellow;
+    border: 1px solid red;
+
+  }
+
+  .practicing img {
+    display: flex;
+    width: 94%;
+    margin: 2rem 1.5rem 2rem 1.5rem;
+  }
+
+  .practicing h1 {
+    padding-left: 1.5rem;
+    font-weight: 700;
+    font-size: 2.5rem;
+  }
+
+
+  .practicing p {
+    display: flex;
+    padding-left: 1.5rem;
+    padding-bottom:
+    font-size: 1.2rem;
+    font-weight: 300;
+  }
+
+  .practicing q {
+    display: flex;
+    padding-bottom: 2.5rem;
+    font-weight: 600;
+  }
+
+  .threepics {
+     display: flex;
+     flex-direction: column;
+     justify-content:center;
+     align-items:flex-start;
+     border-left: 1px solid lightgray;
+   }
+
+   .three-one {
+     display: flex;
+     align-items: flex-start;
+     padding: 2rem 1.7rem 1rem 1rem;
+     border-bottom: 1px solid lightgray;
+   }
+
+   .three-one img {
+    display: flex-start;
+    flex-direction: row;
+   ;
+    width: 148px;
+    height: 148px;
+   }
+
+   .three-one .txt {
+     display: flex;
+     justify-content:flex-start;
+     align-items: flex-start;
+     flex-direction: column;
+     border: none;
+    }
+
+    .three-one .txt h3 {
+      font-size: 1.60rem;
+    }
+
+    .three-one .txt p {
+      font-size: 0.8rem;
+      font-weight: 600;
+      padding-bottom:0.5rem;
+    }
+
+   .three-one .txt a {
+     display: flex;
+     font-size: 1.1rem;
+     font-weight: 600;
+     text-decoration: none;
+     color: blue;
+   }
+
+   .three-one .txt a:hover {
+    color:red;
+    text-decoration: none;
+   }
+
+   .three-two, .three-three {
+     display: flex;
+     align-items: flex-start;
+     padding: 1rem 1.5rem 1rem 1rem;
+   }
+
+   .three-two img {
+    display: flex-start;
+    flex-direction: row;
+   ;
+    width: 148px;
+    height: 148px;
+   }
+
+   .three-two .txt {
+     display: flex;
+     justify-content:flex-start;
+     align-items: flex-start;
+     flex-direction: column;
+    }
+
+    .three-two .txt h3 {
+      font-size: 1.60rem;
+    }
+
+    .three-two .txt p {
+      font-size: 0.8rem;
+      font-weight: 600;
+      padding-bottom: 0.5rem;
+    }
+
+   .three-two .txt a {
+     display: flex;
+     font-size: 1.1rem;
+     font-weight: 600;
+     text-decoration: none;
+     color: blue;
+   }
+
+   .three-two .txt a:hover {
+    color:red;
+   }
+
+   .three-three {
+    background-color: lightgrey;
+
+   }
+
+    .three-three img {
+     display: flex;
+     flex-direction: row;
+    ;
+     width: 148px;
+     height: 148px;
+    }
+
+    .three-three .txt {
+      display: flex;
+      justify-content:flex-start;
+      align-items: flex-start;
+      flex-direction: column;
+     }
+
+     .three-three .txt h3 {
+       font-size: 1.60rem;
+     }
+
+     .three-three .txt p {
+       font-size: 0.8rem;
+       font-weight: 600;
+       padding-bottom: 0.5rem;
+     }
+
+    .three-three .txt a {
+      display: flex;
+      font-size: 1.1rem;
+      font-weight: 600;
+      text-decoration: none;
+      color: blue;
+    }
+
+    .three-three .txt a:hover {
+     color:red;
+   }
