--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900|Merriweather+Sans:300,300i,400,400i,700,700i,800,800i');
-
+ /* CSS style sheet for Colmar Academy */
 html{
   font-size: 16px;
     background-color: white;
@@ -739,9 +739,7 @@ html{
   padding-left: 1rem;
   background-color: #BBBECF;
   width: 407px;
-
 }
-
 
 .fisma-item1 img {
   height: 136px;
@@ -776,7 +774,6 @@ html{
   padding-top: 2rem;
   padding-bottom: 1rem;
 }
-
 
 .fisma {
   display: flex;
