--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -174,7 +174,7 @@ html{
      .students img {
        display: flex;
        width: 100%;
-
+       height: 100%;
        overflow: hidden;
     }
 
